# om-lang

./: .gitignore  README.md  dev.sh
docs/: ms8-2022-10-29-1805.excalidraw
examples/omega/: test2.omega.vm  test8.omega.vm
examples/omega/ms8/: example.omega.vm
examples/pyvm/: example_ms8.vm  print_7.vm
impl/python/: Makefile  a.omega  ast_pprint.py  asts.py  bindings.py  codegen.py  codegen.py.bck  compile_test.sh  debug.txt  dev.sh  error.py  main.py  offsets.py  p1_compile.py  parser.py  pickle.pickle  scanner.py  show_tree.py  symbol_test.py  symbols.py  template.py  test_diff.sh  testerator.py  vm.py  vm_parser.py  vm_utils.py  vmcmd.py
impl/python/debugging/: README.md
impl/python/milestone1/: m1.py
impl/python/milestone2/: scanner.py
impl/python/milestone3/: Makefile  correct.json  error.py  omega.ebnf  omega.gram  parser.py  scanner.py  tokens.py
impl/python/milestone4/: Makefile  ast_tests.py  asts.py  incorrect.json  omega_scratch.gram  parser.py  scanner.py  symbols.py  tester.py  tokens.py
impl/python/milestone5/: Makefile  ast_tests.py  asts.py  bindings.py  error.py  parser.py  show_tree.py  symbols.py  template.py  test.out  test_bindings.pickle  testerator.py  typecheck.py  writeup.md
impl/python/milestone5_toy/: asts.py  pickle.pickle  symbols.py  testerator.py  tokens.py  typecheck.py
impl/python/milestone6/: Makefile  asts.py  bindings.py  (+4 more)
impl/rust/: Cargo.toml
impl/rust/src/: error.rs  lib.rs  parser.rs  scanner.rs  scanner.rs.old  stdx.rs  token.rs
impl/rust/tests/: scanner.rs  token.rs
migrate_scripts/: migrate-omega.sh
(+52 files in other folders)
